$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 1.17-9 (opened March 9, 2011)

	* merged r1532: fix gettextf in d/r/rarefy.

	* merged r1527,8: doc updates in CCorA.Rd & ordihull.Rd.

	* merged r1522 thru r1526: implement drarefy; drarefy, rrarefy,
	specnumber, diversity accept vector input.

	* merged r1521: clarify envfit.Rd.
	
	* merged r1499: as.preston, preston default to 'tiesplit = TRUE'.

Version 1.17-8 (released March 2, 2011)

	* merged r1494: no return.

	* merged r1495: procrustes checks input.

	* merged r1496,7: FAQ updates.

	* merged r1501: as.preston 'tiesplit = TRUE' bug.

	* merged r1500,4: decorana zero-eigenvalue fix.

	* merged r1510 thru 1515: documentation fixes in beals.Rd,
	plot.cca.Rd, scores.Rd, and vegdist.Rd.

Version 1.17-7 (released February 16, 2011)

	* merged r1489: nestednodf with weighted = FALSE.

	* merged r1482-4: eigenvals for ade4 and labdsv.

	* merged r1476: zip data files.

	* merged r1475: partially matched argunments in functions.

	* merged r1471,3,4: split "ties" in prestonfit (and allies).

	* merged revs 1444 to 1467:

	* fixes in anova.cca scope, subset and NA handling:
	anova.ccabyaxis, anova.ccabyterm, ordiParseFormula, rda.formula
	cca.formula, capscale.

	* implemented subset in capscale.

	* implemented simulate.capscale. 

	* removed additive constant 'ac' in predict.rda() for capscale and
	fitted.capscale().

	* fixed typo in specaccum() result.

	* added choice of 'individuals' or 'sites' in plot.specaccum()

Version 1.17-6 (released January 10, 2011)

	* merged revs 1427:1441 (versions 1.18-19 and 1.18-20) or
	everything after release 1.17-5. 

	* capscale, print.cca, summary.cca, eigenvals: handling negative
	eigenvalues.

	* capscale: robustness of add = TRUE in stats:::cmdscale.

	* metaMDS: check negative data and adjust arguments.

	* wascores: check negative weights and stop.

	* CCorA: change scaling, tiny fixes.

	* decision vignette: typos and removing text on Canoco 3 which