@@ -4,7 +4,18 @@ VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 1.17-9 (opened March 9, 2011)
 
+	* merged 1534: typo in vegdist.Rd.
+
+	* merged 1541,8: metaMDSiter got more flexible 'previous.tries. 
+
+	* merged 1538,9, 1542,5: ordisurf gaine new arguments and got a
+	new plot method.
+
+	* merged r1533,7, 1544,7: metaMDSrotate works with > 2 dim.
+
 	* merged r1532: fix gettextf in d/r/rarefy.
+
+	* merged r1531,4: ordisurf got formula interface.
 
 	* merged r1527,8: doc updates in CCorA.Rd & ordihull.Rd.
 
